--- a/src/ViveCortelazor/Resources/Views/Shared/_Layout.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_Layout.en.resx
@@ -120,4 +120,7 @@
   <data name="Home" xml:space="preserve">
     <value>Home</value>
   </data>
+  <data name="Privacy" xml:space="preserve">
+    <value>Privacy</value>
+  </data>
 </root>
