Add privacy text

--- a/src/ViveCortelazor/Resources/Views/Home/Privacy.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Privacy.en.resx
@@ -120,4 +120,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Privacy policy</value>
   </data>
+  <data name="Privacy Text" xml:space="preserve">
+    <value>Privacy policy details.</value>
+  </data>
 </root>
