--- a/src/ViveCortelazor/Resources/Views/Shared/_LanguagesCombo.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_LanguagesCombo.es.resx
@@ -117,10 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="en" xml:space="preserve">
+    <value>English</value>
   </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
+  <data name="es" xml:space="preserve">
+    <value>Español</value>
   </data>
 </root>
