--- a/src/ViveCortelazor/Resources/Views/Shared/_Footer.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_Footer.es.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="Cortelazor and Sierra de Aracena" xml:space="preserve">
+    <value>Cortelazor y Sierra de Aracena</value>
+  </data>
+  <data name="Developed by" xml:space="preserve">
+    <value>Desarrollado por</value>
   </data>
   <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
+    <value>Privacidad</value>
   </data>
 </root>
