Change cookies text

--- a/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
@@ -121,7 +121,7 @@
     <value>Cookies policy</value>
   </data>
   <data name="Cookies Text" xml:space="preserve">
-    <value>**Cookies Policy**  
+    <value># Cookies Policy  
 Last updated: February 13, 2025
 
 ## 1. What are cookies?
