--- a/src/ViveCortelazor/Resources/Views/Home/Cookies.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Cookies.es.resx
@@ -121,7 +121,7 @@
     <value>Política de Cookies</value>
   </data>
   <data name="Cookies Text" xml:space="preserve">
-    <value>**Política de Cookies**  
+    <value># Política de Cookies
 
 Última actualización: 13 de febrero de 2025
 
