--- a/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.en.resx
@@ -120,11 +120,11 @@
   <data name="Accept All" xml:space="preserve">
     <value>Accept All</value>
   </data>
+  <data name="Cookies Text" xml:space="preserve">
+    <value>At [**vivecortelazor.es**](https://www.vivecortelazor.es), we use cookies to analyze traffic and improve your experience on our website. You can accept all cookies, reject them, or customize your preferences. For more information, please check our [**Cookies Policy**](https://www.vivecortelazor.es/en/cookies) and our [**Privacy Policy**](https://www.vivecortelazor.es/en/privacy).</value>
+  </data>
   <data name="Marketing" xml:space="preserve">
     <value>Marketing</value>
-  </data>
-  <data name="Our website uses cookies to enhance your experience. By continuing to use our website, you are agreeing to our use of cookies. Necessary cookies are always enabled." xml:space="preserve">
-    <value>Our website uses cookies to enhance your experience. By continuing to use our website, you are agreeing to our use of cookies. Necessary cookies are always enabled.</value>
   </data>
   <data name="Preferences" xml:space="preserve">
     <value>Preferences</value>
