--- a/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
@@ -126,7 +126,7 @@
   <data name="Introduction3" xml:space="preserve">
     <value>In addition to its natural beauty, [**Cortelazor**](https://www.vivecortelazor.es/en) is a place where **traditional gastronomy** plays a fundamental role. Products derived from **Iberian pork, honey, artisanal cheeses, and mountain stews** are just some of the delicacies you can enjoy in its taverns and bars.
 
-If you're looking for an authentic experience in contact with nature, history, and culture of the **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/en) is your perfect guide to discover everything this wonderful village has to offer.</value>
+If you're looking for an authentic experience in contact with nature, [**history**](https://www.vivecortelazor.es/en/history), and culture of the **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/en) is your perfect guide to discover everything this wonderful village has to offer.</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Discover Cortelazor la Real, a charming gem in the Sierra de Aracena</value>
