--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -126,7 +126,7 @@
   <data name="Introduction3" xml:space="preserve">
     <value>Además de su belleza natural, [**Cortelazor**](https://www.vivecortelazor.es/es) es un lugar donde la **gastronomía tradicional** juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
 
-Si buscas una experiencia auténtica en contacto con la naturaleza, la historia y la cultura de la **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/es) es tu guía perfecta para descubrir todo lo que este maravilloso pueblo tiene para ofrecer.</value>
+Si buscas una experiencia auténtica en contacto con la naturaleza, la [**historia**](https://www.vivecortelazor.es/es/historia) y la cultura de la **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/es) es tu guía perfecta para descubrir todo lo que este maravilloso pueblo tiene para ofrecer.</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Descubre Cortelazor la Real, un rincón con encanto en la Sierra de Aracena</value>
