--- a/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex-en.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex-en.resx
@@ -123,6 +123,9 @@
   <data name="Developed by" xml:space="preserve">
     <value>Developed by</value>
   </data>
+  <data name="History" xml:space="preserve">
+    <value>History</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Home</value>
   </data>
