--- a/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex.es.resx
@@ -123,6 +123,9 @@
   <data name="Developed by" xml:space="preserve">
     <value>Desarrollado por</value>
   </data>
+  <data name="History" xml:space="preserve">
+    <value>Historia</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Inicio</value>
   </data>
