--- a/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Description" xml:space="preserve">
+    <value>Welcome to Vive Cortelazor, where you can find information about the charming village of Cortelazor la Real, located in the heart of the Sierra de Aracena. Enjoy its unique nature, history, and gastronomy.</value>
+  </data>
   <data name="Introduction1" xml:space="preserve">
     <value>Welcome to [**Vive Cortelazor**](https://www.vivecortelazor.es/en), the place where you'll find all the information about [**Cortelazor la Real**](https://www.vivecortelazor.es/en), a picturesque village in the **Sierra de Aracena and Picos de Aroche**, in the heart of the Natural Park. Surrounded by lush forests of holm oaks and cork trees, this destination is ideal for those seeking tranquility, nature, and tradition.</value>
   </data>
@@ -127,6 +130,9 @@
     <value>In addition to its natural beauty, [**Cortelazor**](https://www.vivecortelazor.es/en) is a place where **traditional gastronomy** plays a fundamental role. Products derived from **Iberian pork, honey, artisanal cheeses, and mountain stews** are just some of the delicacies you can enjoy in its taverns and bars.
 
 If you're looking for an authentic experience in contact with nature, [**history**](https://www.vivecortelazor.es/en/history), and culture of the **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/en) is your perfect guide to discover everything this wonderful village has to offer.</value>
+  </data>
+  <data name="Keywords" xml:space="preserve">
+    <value>Cortelazor la Real, Sierra de Aracena, Travel to Cortelazor, Villages of the Sierra de Aracena, Rural tourism in Cortelazor, Nature in Cortelazor, Hiking in the Sierra de Aracena, Gastronomy of Cortelazor, Historical heritage of Cortelazor, What to see in Cortelazor, Accommodation in Cortelazor, Culture of the Sierra de Aracena, Outdoor activities in Cortelazor, Hiking routes in the Sierra de Aracena, Hiking routes in Cortelazor, Huelva villages, Andalusia, Andalusia villages</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Discover Cortelazor la Real, a charming gem in the Sierra de Aracena</value>
