Change history text #74

--- a/src/ViveCortelazor/Resources/Views/Home/History.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.en.resx
@@ -124,9 +124,10 @@
     <value>History</value>
   </data>
   <data name="History Text" xml:space="preserve">
-    <value>![Cortelazor la Real](/images/history-cortelazor.jpg)
+    <value># History of Cortelazor la Real
+---
 
-# History of Cortelazor la Real
+![Cortelazor la Real](/images/history-cortelazor.jpg)
 
 [**Cortelazor la Real**](https://www.vivecortelazor.es/es) is a picturesque municipality in the province of Huelva, nestled in the Sierra de Aracena and Picos de Aroche Natural Park. Its history dates back to prehistoric times, with evidence of human occupation since the Bronze Age. Over the centuries, various civilizations have left their mark on this beautiful corner of the Sierra de Huelva.
 
