--- a/src/ViveCortelazor/Resources/Views/Home/History.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.es.resx
@@ -124,9 +124,10 @@
     <value>Historia</value>
   </data>
   <data name="History Text" xml:space="preserve">
-    <value>![Cortelazor la Real](/images/history-cortelazor.jpg)
+    <value># Historia de Cortelazor la Real
+---
 
-# Historia de Cortelazor la Real
+![Cortelazor la Real](/images/history-cortelazor.jpg)
 
 [**Cortelazor la Real**](https://www.vivecortelazor.es/es) es un pintoresco municipio de la provincia de Huelva, enclavado en el Parque Natural Sierra de Aracena y Picos de Aroche. Su historia se remonta a tiempos prehistóricos, con evidencias de ocupación humana desde la Edad del Bronce. A lo largo de los siglos, diversas civilizaciones han dejado su huella en este hermoso rincón de la Sierra de Huelva.
 
